Fixed overflowing

--- a/src/app/calculator/shared/input-side/input-side.component.css
+++ b/src/app/calculator/shared/input-side/input-side.component.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 10px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 h1 {
