--- a/src/app/calculator/shared/output-side/output-side.component.css
+++ b/src/app/calculator/shared/output-side/output-side.component.css
@@ -7,4 +7,5 @@
   gap: 10px;
   border-radius: 0 0 10px 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
